# tfm-math-platform

./: .gitignore  Dockerfile  cloudbuild.yaml  deploy_gcp.sh  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
.streamlit/: config.toml
config/: dataset_config.py
config/prompts/: __init__.py  exercise.prompt.j2  solution.prompt.j2
src/app/: webapp copy.py  webapp.py
src/core/: generator.py  llm_connector.py  solver.py
src/services/llm/: gemini_connector.py  openai_connector.py  provider.py
